--- a/tasks/vagrant_up.yml
+++ b/tasks/vagrant_up.yml
@@ -1,14 +1,14 @@
 ---
 - name: Clear out previous runs
   file:
-    path: "{{ vagrant_folder }}/.vagrant"
+    path: "{{ item.vagrant_folder }}/.vagrant"
     state: absent
   failed_when: false
 
 - name: Start Vagrant virtual machines
   command: "vagrant up"
   args:
-    chdir: "{{ vagrant_folder }}"
+    chdir: "{{ item.vagrant_folder }}"
   changed_when: false
   register: boxes
 
