--- a/tasks/vagrant_destroy.yml
+++ b/tasks/vagrant_destroy.yml
@@ -2,6 +2,6 @@
 - name: Destroy Vagrant virtual machines
   command: "vagrant destroy"
   args:
-    chdir: "{{ item.vagrant_folder }}"
+    chdir: "{{ item.value.vagrant_folder }}"
   changed_when: false
 ...
