--- a/tasks/vagrant_halt.yml
+++ b/tasks/vagrant_halt.yml
@@ -2,6 +2,6 @@
 - name: Halt Vagrant virtual machines
   command: "vagrant halt"
   args:
-    chdir: "{{ item.vagrant_folder }}"
+    chdir: "{{ item.value.vagrant_folder }}"
   changed_when: false
 ...
